<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".components.newRound.NewRoundFragment"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        >

        <LinearLayout
            android:id="@+id/layout_create_round__date"
            style="@style/CreateRoundLinearLayout"
            android:layout_width="wrap_content"
            >

            <TextView
                android:id="@+id/text_create_round__date_label"
                style="@style/GeneralText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_round__date"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                />

            <!-- Placeholder text -->
            <TextView
                android:id="@+id/text_create_round__time"
                style="@style/GeneralText"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="17:40"
                tools:ignore="HardcodedText"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                />

            <!-- Placeholder text -->
            <TextView
                android:id="@+id/text_create_round__date"
                style="@style/GeneralText"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="22/3/2020"
                tools:ignore="HardcodedText"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_create_round__round"
            style="@style/CreateRoundLinearLayout"
            android:layout_width="wrap_content"
            >

            <TextView
                android:id="@+id/text_create_round__round_label"
                style="@style/GeneralText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_round__round"
                />

            <Spinner
                android:id="@+id/spinner_create_round__round"
                style="@style/Spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_create_round__round_sub_type"
            style="@style/CreateRoundLinearLayout"
            android:layout_width="wrap_content"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/text_create_round__round_sub_type_label"
                style="@style/GeneralText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_round__round_sub_type"
                />

            <Spinner
                android:id="@+id/spinner_create_round__round_sub_type"
                style="@style/Spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_create_round__arrow_count_indicator"
            style="@style/CreateRoundLinearLayout"
            android:layout_width="wrap_content"
            android:layout_marginBottom="5dp"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/text_create_round__arrow_count_indicator_label"
                style="@style/GeneralText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_round__arrow_count_indicator"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                />

            <TextView
                android:id="@+id/text_create_round__arrow_count_indicator"
                style="@style/GeneralText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_create_round__distance_indicator"
            style="@style/CreateRoundLinearLayout"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/text_create_round__distance_indicator_label"
                style="@style/GeneralText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_round__distance_indicator"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                />

            <TextView
                android:id="@+id/text_create_round__distance_indicator"
                style="@style/GeneralText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            style="@style/CreateRoundLinearLayout"
            android:layout_width="wrap_content"
            >

            <Button
                android:id="@+id/button_create_round__submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_round__submit"
                />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>